--- a/IOTHubWeb/Views/Home/About.cshtml
+++ b/IOTHubWeb/Views/Home/About.cshtml
@@ -1,7 +1,13 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<div class="container" style="color:white; padding:15%;">
+    <h1>IOT Hub</h1>
+    <h2>
+        It's the application for managing the IoT devices, gathering data and creating reports base on it.<br>
+        <p></p>
+        At that moment implemented only functionality related to CCTV.
+    </h2>
+        
+</div>
