--- a/IOTHubWeb/Views/Account/Register.cshtml
+++ b/IOTHubWeb/Views/Account/Register.cshtml
@@ -3,12 +3,11 @@
     ViewBag.Title = "Register";
 }
 
-<h2>@ViewBag.Title.</h2>
-
+<div class="container" style="color:white; padding:13%;">
 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Create a new account.</h4>
+    <h1>Create a new account.</h1>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
@@ -31,11 +30,11 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
+            <input type="submit" class="btn btn-success" value="Register" />
         </div>
     </div>
 }
-
+    </div>
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
