--- a/IOTHubWeb/Views/Home/Contact.cshtml
+++ b/IOTHubWeb/Views/Home/Contact.cshtml
@@ -1,17 +1,13 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
-
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
-
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+<div class="container"  style="color:white; padding:15%;">
+    <h1>In the case of emergency you can contact me by the following link:</h1>
+    <h2>
+        <a href="">Facebook</a><br>
+        <p></p>
+        or send me a mail:<br>
+        <p></p>
+        <a href="mailto:Support@example.com">v.dovnich@gmail.com</a>
+    </h2>
+</div>
