--- a/IOTHubWeb/Views/Nodes/Details.cshtml
+++ b/IOTHubWeb/Views/Nodes/Details.cshtml
@@ -130,7 +130,7 @@
                     <td>
                         @Html.ActionLink("Edit", "Edit", "Dots", new { id = item.Id }, new { @class = "btn btn-primary" })
                         @Html.ActionLink("Details", "Details", "Dots", new { id = item.Id }, new { @class = "btn btn-info" })
-                        @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-danger" })
+                        @Html.ActionLink("Delete", "Delete", "Dots", new { id = item.Id }, new { @class = "btn btn-danger" })
                     </td>
                 </tr>
             }
