--- a/IOTHubWeb/Views/Shared/_Layout.cshtml
+++ b/IOTHubWeb/Views/Shared/_Layout.cshtml
@@ -25,7 +25,8 @@
                         <li><div>@Html.ActionLink("About", "About", "Home")</div></li>
                         <li><div>@Html.ActionLink("Contact", "Contact", "Home")</div></li>
                         <li><div>@Html.ActionLink("Nodes", "Index", "Nodes")</div></li>
-                        <li><div>@Html.ActionLink("Cars", "Index", "Cars")</div></li>
+                        <li><div>@Html.ActionLink("LPN", "Index", "Cars")</div></li>
+                        <li><div>@Html.ActionLink("Dots", "Index", "Dots")</div></li>
                     </ul>
                 </div>
             </div>
