--- a/IOTHubWeb/Views/Cars/Delete.cshtml
+++ b/IOTHubWeb/Views/Cars/Delete.cshtml
@@ -3,62 +3,63 @@
 @{
     ViewBag.Title = "Delete";
 }
+<div style="color:white; padding-left:25%; padding-top:15%;" class="container">
+    <h2>Delete LP Number</h2>
 
-<h2>Delete</h2>
+    <h3>Are you sure you want to delete this?</h3>
+    <div>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.OwnerId)
+            </dt>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Car</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.OwnerId)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.OwnerId)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.OwnerId)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.LicensePlateNumber)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.LicensePlateNumber)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.LicensePlateNumber)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.LicensePlateNumber)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Brand)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Brand)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Brand)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Brand)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Model)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Model)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Model)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Model)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Color)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Color)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Color)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Color)
-        </dd>
+        </dl>
 
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-default" })
+            <input type="submit" value="Delete" class="btn btn-danger" />
         </div>
-    }
-</div>
+        }
+    </div>
+    </div>
