--- a/IOTHubWeb/Views/Cars/Details.cshtml
+++ b/IOTHubWeb/Views/Cars/Details.cshtml
@@ -3,56 +3,56 @@
 @{
     ViewBag.Title = "Details";
 }
+<div style="color:white; padding-left:25%; padding-top:14%;" class="container">
+    <h2>LP Number Details</h2>
 
-<h2>Details</h2>
+    <div>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.OwnerId)
+            </dt>
 
-<div>
-    <h4>Car</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.OwnerId)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.OwnerId)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.OwnerId)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.LicensePlateNumber)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.LicensePlateNumber)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.LicensePlateNumber)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.LicensePlateNumber)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Brand)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Brand)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Brand)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Brand)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Model)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Model)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Model)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Model)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Color)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Color)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Color)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Color)
-        </dd>
-
-    </dl>
-</div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+        </dl>
+    </div>
+    <p>
+        @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-default" })
+        @Html.ActionLink("Edit", "Edit", new { id = Model.Id }, new { @class = "btn btn-primary" })
+    </p>
+    </div>
