--- a/IOTHubWeb/Views/Dots/Delete.cshtml
+++ b/IOTHubWeb/Views/Dots/Delete.cshtml
@@ -3,78 +3,80 @@
 @{
     ViewBag.Title = "Delete";
 }
+<div style="color:white; padding-left:13%; padding-top:11%;" class="container">
+    <h2>Delete dot</h2>
 
-<h2>Delete</h2>
+    <h3>Are you sure you want to delete this?</h3>
+    <div>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Dot</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.NodeId)
-        </dt>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.NodeId)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.NodeId)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.NodeId)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Name)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Name)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Description)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Description)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Model)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Model)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Model)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Model)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Place)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Place)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Place)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Place)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Latitude)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Latitude)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Latitude)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Latitude)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Longitude)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Longitude)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Longitude)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Longitude)
+            </dd>
 
-    </dl>
+        </dl>
 
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-default"})
+            <input type="submit" value="Delete" class="btn btn-danger" /> 
         </div>
-    }
-</div>
+        }
+    </div>
+    </div>
