--- a/IOTHubWeb/Views/Nodes/Create.cshtml
+++ b/IOTHubWeb/Views/Nodes/Create.cshtml
@@ -4,14 +4,14 @@
     ViewBag.Title = "Create";
 }
 <div style="color:white; padding-left:15%; padding-top:5%;" class="container">
-    <h2>Create</h2>
+    <h2>Create node</h2>
 
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
 
         <div class="form-horizontal">
-            <h4>Node</h4>
+
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             @*<div class="form-group">
@@ -88,13 +88,10 @@
 
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Create" class="btn btn-default" />
+                    @Html.ActionLink("Back to List", "Index", null, new { @class= "btn btn-default" })
+                    <input type="submit" value="Create" class="btn btn-success" />
                 </div>
             </div>
         </div>
     }
-
-    <div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>
     </div>
