--- a/IOTHubWeb/Views/Nodes/Delete.cshtml
+++ b/IOTHubWeb/Views/Nodes/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewBag.Title = "Delete";
 }
 <div style="color:white; padding-left:5%; padding-top:11%" class="container">
-    <h2>Delete</h2>
+    <h2>Delete node</h2>
 
     <h3>Are you sure you want to delete this?</h3>
     <div>
-        <h4>Node</h4>
+        
         <hr />
         <dl class="dl-horizontal">
             <dt>
@@ -89,10 +89,11 @@
         {
             @Html.AntiForgeryToken()
 
-            <div class="form-actions no-color">
-                <input type="submit" value="Delete" class="btn btn-danger" /> 
-                @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-default" })
-            </div>
+        <div class="form-actions no-color">
+            @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-default" })
+            <input type="submit" value="Delete" class="btn btn-danger" />
+
+        </div>
         }
     </div>
     </div>
