--- a/IOTHubWeb/Views/Nodes/Edit.cshtml
+++ b/IOTHubWeb/Views/Nodes/Edit.cshtml
@@ -5,14 +5,14 @@
 }
 
 <div style="color:white; padding-left:15%; padding-top:10%;" class="container">
-    <h2>Edit</h2>
+    <h2>Edit node</h2>
 
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
 
         <div class="form-horizontal">
-            <h4>Node</h4>
+           
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             @Html.HiddenFor(model => model.Id)
@@ -91,13 +91,10 @@
 
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Save" class="btn btn-default" />
+                    @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-default" })
+                    <input type="submit" value="Save" class="btn btn-success" />
                 </div>
             </div>
         </div>
     }
-
-    <div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>
     </div>
