--- a/IOTHubWeb/Views/Nodes/Index.cshtml
+++ b/IOTHubWeb/Views/Nodes/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 <div style="color:white; padding-left:5%" class="container">
-    <h2>Index</h2>
+    <h2>Nodes</h2>
     <p>
         @Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-success" })
     </p>
