--- a/IOTHubWeb/Views/Home/Index.cshtml
+++ b/IOTHubWeb/Views/Home/Index.cshtml
@@ -10,6 +10,7 @@
         width: auto;
         margin-left: 200px;
     }
+
     .map-control {
         background-color: #fff;
         border: 1px solid #ccc;
@@ -72,6 +73,7 @@
     var latLng = { lat: @Model.FirstOrDefault().Latitude, lng: @Model.FirstOrDefault().Longitude };
     var marker;
     var nodeListJS;
+    var nodeId;
 
     function initMap() {
 
@@ -281,24 +283,30 @@
         //document.getElementById('show-poi').addEventListener('click', function () {
         //    map.setOptions({ styles: styles['default'] });
         //});
-
        
-
         //Associate the styled map with the MapTypeId and set it to display.
         map.mapTypes.set('styled_map', styledMapType);
         map.setMapTypeId('styled_map');
 
-          dotListJS = @Html.Raw(Json.Encode(Model));
-            dotListJS.forEach(function (element) {
-                marker = new google.maps.Marker({
-                    position: { lat: element.Latitude, lng: element.Longitude },
-                    map: map,
-                    title: element.Name,
-                    icon: 'https://github.com/VDSnuff/IOTHub/blob/master/IOTHubWeb/Img/nodes_red.png?raw=true',
-                    label: { color: '#FFFFFF', fontWeight: 'bold', fontSize: '14px', text: element.Name },
-                });
+        dotListJS = @Html.Raw(Json.Encode(Model));
+        dotListJS.forEach(function (element) {
+            marker = new google.maps.Marker({
+                position: { lat: element.Latitude, lng: element.Longitude },
+                map: map,
+                title: element.Name,
+                icon: 'https://github.com/VDSnuff/IOTHub/blob/master/IOTHubWeb/Img/nodes_red.png?raw=true',
+                label: { color: '#FFFFFF', fontWeight: 'bold', fontSize: '14px', text: element.Name },
             });
 
+            google.maps.event.addListener(
+                marker,
+                "click",
+                function (e) {
+                    return window.location.href = 'http://localhost:51691/Nodes/Details/' + element.Id;
+                }
+            );
+
+        });
     }
 
     var styles = {
